refactor(tests): rename test classes and simplify resource management (#2494)[skip ci]
(cherry picked from commit cd2d275ae1a1f6fcd207c4971ad227da9a6bf69c)